// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DelegateRow should emit action on select button 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=" css-1li86da"
        data-testid="TableRow"
      >
        <td>
          <div
            class="font-bold border-2 border-r-0 border-transparent css-14huxtf"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="font-bold border-t-2 border-b-2 border-transparent space-x-4 css-1d4ra48"
          >
            <div
              class="-ml-0.5 shrink-0 css-tthe5h"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <div
              class="relative grow"
            >
              <span
                class="absolute flex w-full items-center"
              >
                <div
                  class="overflow-hidden text-ellipsis"
                >
                  arkx
                </div>
                <a
                  class="ring-focus group inline-block ml-2 block sm:hidden css-15tcy38"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href=""
                  rel="noopener noreferrer"
                >
                  <span
                    class="css-1y2194z"
                  >
                    <div
                      class="css-v0ob3f"
                      height="16"
                      width="16"
                    >
                      <svg>
                        arrow-external.svg
                      </svg>
                    </div>
                  </span>
                </a>
              </span>
              <span>
                 
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent css-1d4ra48"
          >
            <div>
              <div
                class="text-theme-warning-500 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  status-standby.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent css-1d4ra48"
          >
            <a
              class="ring-focus group inline-block css-15tcy38"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-1y2194z"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="justify-end border-2 border-l-0 border-transparent css-1hhowo0"
          >
            <div
              class="-mr-0.5"
            >
              <button
                class="css-1jhy6v9"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Select
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRow should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=" css-1li86da"
        data-testid="TableRow"
      >
        <td>
          <div
            class="font-bold border-2 border-r-0 border-transparent css-14huxtf"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="font-bold border-t-2 border-b-2 border-transparent space-x-4 css-1d4ra48"
          >
            <div
              class="-ml-0.5 shrink-0 css-tthe5h"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <div
              class="relative grow"
            >
              <span
                class="absolute flex w-full items-center"
              >
                <div
                  class="overflow-hidden text-ellipsis"
                >
                  arkx
                </div>
                <a
                  class="ring-focus group inline-block ml-2 block sm:hidden css-15tcy38"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href=""
                  rel="noopener noreferrer"
                >
                  <span
                    class="css-1y2194z"
                  >
                    <div
                      class="css-v0ob3f"
                      height="16"
                      width="16"
                    >
                      <svg>
                        arrow-external.svg
                      </svg>
                    </div>
                  </span>
                </a>
              </span>
              <span>
                 
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent css-1d4ra48"
          >
            <div>
              <div
                class="text-theme-warning-500 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  status-standby.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent css-1d4ra48"
          >
            <a
              class="ring-focus group inline-block css-15tcy38"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-1y2194z"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="justify-end border-2 border-l-0 border-transparent css-1hhowo0"
          >
            <div
              class="-mr-0.5"
            >
              <button
                class="css-1jhy6v9"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Select
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRow should render changed style when network requires vote amount 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=" css-1li86da"
        data-testid="TableRow"
      >
        <td>
          <div
            class="font-bold border-2 border-r-0 border-transparent bg-theme-warning-50 dark:bg-theme-background dark:border-theme-warning-600 css-14huxtf"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="font-bold border-t-2 border-b-2 border-transparent space-x-4 bg-theme-warning-50 dark:bg-theme-background dark:border-theme-warning-600 css-1d4ra48"
          >
            <div
              class="-ml-0.5 shrink-0 css-tthe5h"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <div
              class="relative grow"
            >
              <span
                class="absolute flex w-full items-center"
              >
                <div
                  class="overflow-hidden text-ellipsis"
                >
                  arkx
                </div>
                <a
                  class="ring-focus group inline-block ml-2 block sm:hidden css-15tcy38"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href=""
                  rel="noopener noreferrer"
                >
                  <span
                    class="css-1y2194z"
                  >
                    <div
                      class="css-v0ob3f"
                      height="16"
                      width="16"
                    >
                      <svg>
                        arrow-external.svg
                      </svg>
                    </div>
                  </span>
                </a>
              </span>
              <span>
                 
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent bg-theme-warning-50 dark:bg-theme-background dark:border-theme-warning-600 css-1d4ra48"
          >
            <div>
              <div
                class="text-theme-warning-500 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  status-standby.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent bg-theme-warning-50 dark:bg-theme-background dark:border-theme-warning-600 css-1d4ra48"
          >
            <a
              class="ring-focus group inline-block css-15tcy38"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-1y2194z"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-68"
          data-testid="DelegateVoteAmount"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent bg-theme-warning-50 dark:bg-theme-background dark:border-theme-warning-600 css-1d4ra48"
          >
            <div
              class="relative flex-1 px-3"
            >
              <div
                class="relative"
              >
                <div
                  class="css-a6wl22"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="no-ligatures w-full border-none text-right focus:text-left pr-8 css-1nupw50"
                      data-testid="InputCurrency"
                      name="amount"
                      placeholder="0"
                      type="text"
                      value="30"
                    />
                  </div>
                </div>
              </div>
              <span
                class="absolute inset-y-0 flex items-center space-x-3 right-7"
                data-testid="DelegateVoteAmount__ticker"
              >
                <span
                  class="text-theme-text"
                >
                  ARK
                </span>
              </span>
            </div>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="justify-end border-2 border-l-0 border-transparent bg-theme-warning-50 dark:bg-theme-background dark:border-theme-warning-600 css-1hhowo0"
          >
            <div
              class="-mr-0.5"
            >
              <button
                class="css-i0u9bq"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Changed
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRow should render the selected delegate 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=" css-1li86da"
        data-testid="TableRow"
      >
        <td>
          <div
            class="font-bold border-2 border-r-0 border-transparent bg-theme-primary-reverse-50 dark:bg-theme-background dark:border-theme-primary-reverse-600 css-14huxtf"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="font-bold border-t-2 border-b-2 border-transparent space-x-4 bg-theme-primary-reverse-50 dark:bg-theme-background dark:border-theme-primary-reverse-600 css-1d4ra48"
          >
            <div
              class="-ml-0.5 shrink-0 css-tthe5h"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <div
              class="relative grow"
            >
              <span
                class="absolute flex w-full items-center"
              >
                <div
                  class="overflow-hidden text-ellipsis"
                >
                  arkx
                </div>
                <a
                  class="ring-focus group inline-block ml-2 block sm:hidden css-15tcy38"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href=""
                  rel="noopener noreferrer"
                >
                  <span
                    class="css-1y2194z"
                  >
                    <div
                      class="css-v0ob3f"
                      height="16"
                      width="16"
                    >
                      <svg>
                        arrow-external.svg
                      </svg>
                    </div>
                  </span>
                </a>
              </span>
              <span>
                 
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent bg-theme-primary-reverse-50 dark:bg-theme-background dark:border-theme-primary-reverse-600 css-1d4ra48"
          >
            <div>
              <div
                class="text-theme-warning-500 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  status-standby.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent bg-theme-primary-reverse-50 dark:bg-theme-background dark:border-theme-primary-reverse-600 css-1d4ra48"
          >
            <a
              class="ring-focus group inline-block css-15tcy38"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-1y2194z"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="justify-end border-2 border-l-0 border-transparent bg-theme-primary-reverse-50 dark:bg-theme-background dark:border-theme-primary-reverse-600 css-1hhowo0"
          >
            <div
              class="-mr-0.5"
            >
              <button
                class="css-nxm84j"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Selected
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRow should render the selected vote 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=" css-1li86da"
        data-testid="TableRow"
      >
        <td>
          <div
            class="font-bold border-2 border-r-0 border-transparent bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600 h-12 css-mx19qq"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="font-bold border-t-2 border-b-2 border-transparent h-12 space-x-3 bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600 css-1rods8x"
          >
            <div
              class="-ml-0.5 shrink-0 css-jxpwdn"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <div
              class="relative grow"
            >
              <span
                class="absolute flex w-full items-center"
              >
                <div
                  class="overflow-hidden text-ellipsis"
                >
                  arkx
                </div>
                <a
                  class="ring-focus group inline-block ml-2 block sm:hidden css-15tcy38"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href=""
                  rel="noopener noreferrer"
                >
                  <span
                    class="css-1y2194z"
                  >
                    <div
                      class="css-v0ob3f"
                      height="16"
                      width="16"
                    >
                      <svg>
                        arrow-external.svg
                      </svg>
                    </div>
                  </span>
                </a>
              </span>
              <span>
                 
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600 h-12 css-1rods8x"
          >
            <div>
              <div
                class="text-theme-warning-500 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  status-standby.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600 h-12 css-1rods8x"
          >
            <a
              class="ring-focus group inline-block css-15tcy38"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-1y2194z"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="justify-end border-2 border-l-0 border-transparent bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600 css-br23tb"
          >
            <div
              class="-mr-0.5"
            >
              <button
                class="-mr-3 relative text-theme-primary-600 hover:text-theme-primary-700 css-12xyeiw"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Current
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class=" css-1li86da"
        data-testid="TableRow"
      >
        <td>
          <div
            class="font-bold border-2 border-r-0 border-transparent h-12 css-mx19qq"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="font-bold border-t-2 border-b-2 border-transparent h-12 space-x-3 css-1rods8x"
          >
            <div
              class="-ml-0.5 shrink-0 css-jxpwdn"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
              >
                <img
                  alt="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                  title="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                />
              </div>
            </div>
            <div
              class="relative grow"
            >
              <span
                class="absolute flex w-full items-center"
              >
                <div
                  class="overflow-hidden text-ellipsis"
                >
                  genesis_42
                </div>
                <a
                  class="ring-focus group inline-block ml-2 block sm:hidden css-15tcy38"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href=""
                  rel="noopener noreferrer"
                >
                  <span
                    class="css-1y2194z"
                  >
                    <div
                      class="css-v0ob3f"
                      height="16"
                      width="16"
                    >
                      <svg>
                        arrow-external.svg
                      </svg>
                    </div>
                  </span>
                </a>
              </span>
              <span>
                 
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent h-12 css-1rods8x"
          >
            <div>
              <div
                class="text-theme-warning-500 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  status-standby.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent h-12 css-1rods8x"
          >
            <a
              class="ring-focus group inline-block css-15tcy38"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-1y2194z"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="justify-end border-2 border-l-0 border-transparent css-br23tb"
          >
            <div
              class="-mr-0.5"
            >
              <button
                class="-mr-3 relative text-theme-primary-600 hover:text-theme-primary-700 css-12xyeiw"
                data-testid="DelegateRow__toggle-1"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Select
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class=" css-1li86da"
        data-testid="TableRow"
      >
        <td>
          <div
            class="font-bold border-2 border-r-0 border-transparent h-12 css-mx19qq"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="font-bold border-t-2 border-b-2 border-transparent h-12 space-x-3 css-1rods8x"
          >
            <div
              class="-ml-0.5 shrink-0 css-jxpwdn"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
              >
                <img
                  alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                  title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                />
              </div>
            </div>
            <div
              class="relative grow"
            >
              <span
                class="absolute flex w-full items-center"
              >
                <div
                  class="overflow-hidden text-ellipsis"
                >
                  genesis_17
                </div>
                <a
                  class="ring-focus group inline-block ml-2 block sm:hidden css-15tcy38"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href=""
                  rel="noopener noreferrer"
                >
                  <span
                    class="css-1y2194z"
                  >
                    <div
                      class="css-v0ob3f"
                      height="16"
                      width="16"
                    >
                      <svg>
                        arrow-external.svg
                      </svg>
                    </div>
                  </span>
                </a>
              </span>
              <span>
                 
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent h-12 css-1rods8x"
          >
            <div>
              <div
                class="text-theme-warning-500 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  status-standby.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent h-12 css-1rods8x"
          >
            <a
              class="ring-focus group inline-block css-15tcy38"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-1y2194z"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="justify-end border-2 border-l-0 border-transparent css-br23tb"
          >
            <div
              class="-mr-0.5"
            >
              <span>
                <button
                  class="-mr-3 relative text-black css-127bt7l"
                  data-testid="DelegateRow__toggle-2"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Select
                  </div>
                </button>
              </span>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRow should render the selected vote 2`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=" css-1li86da"
        data-testid="TableRow"
      >
        <td>
          <div
            class="font-bold border-2 border-r-0 border-transparent bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600 css-14huxtf"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="font-bold border-t-2 border-b-2 border-transparent space-x-4 bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600 css-1d4ra48"
          >
            <div
              class="-ml-0.5 shrink-0 css-tthe5h"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <div
              class="relative grow"
            >
              <span
                class="absolute flex w-full items-center"
              >
                <div
                  class="overflow-hidden text-ellipsis"
                >
                  arkx
                </div>
                <a
                  class="ring-focus group inline-block ml-2 block sm:hidden css-15tcy38"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href=""
                  rel="noopener noreferrer"
                >
                  <span
                    class="css-1y2194z"
                  >
                    <div
                      class="css-v0ob3f"
                      height="16"
                      width="16"
                    >
                      <svg>
                        arrow-external.svg
                      </svg>
                    </div>
                  </span>
                </a>
              </span>
              <span>
                 
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600 css-1d4ra48"
          >
            <div>
              <div
                class="text-theme-warning-500 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  status-standby.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600 css-1d4ra48"
          >
            <a
              class="ring-focus group inline-block css-15tcy38"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-1y2194z"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="justify-end border-2 border-l-0 border-transparent bg-theme-primary-50 dark:bg-theme-background dark:border-theme-primary-600 css-1hhowo0"
          >
            <div
              class="-mr-0.5"
            >
              <button
                class="css-1bx0hyc"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Current
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class=" css-1li86da"
        data-testid="TableRow"
      >
        <td>
          <div
            class="font-bold border-2 border-r-0 border-transparent css-14huxtf"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="font-bold border-t-2 border-b-2 border-transparent space-x-4 css-1d4ra48"
          >
            <div
              class="-ml-0.5 shrink-0 css-tthe5h"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
              >
                <img
                  alt="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                  title="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                />
              </div>
            </div>
            <div
              class="relative grow"
            >
              <span
                class="absolute flex w-full items-center"
              >
                <div
                  class="overflow-hidden text-ellipsis"
                >
                  genesis_42
                </div>
                <a
                  class="ring-focus group inline-block ml-2 block sm:hidden css-15tcy38"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href=""
                  rel="noopener noreferrer"
                >
                  <span
                    class="css-1y2194z"
                  >
                    <div
                      class="css-v0ob3f"
                      height="16"
                      width="16"
                    >
                      <svg>
                        arrow-external.svg
                      </svg>
                    </div>
                  </span>
                </a>
              </span>
              <span>
                 
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent css-1d4ra48"
          >
            <div>
              <div
                class="text-theme-warning-500 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  status-standby.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent css-1d4ra48"
          >
            <a
              class="ring-focus group inline-block css-15tcy38"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-1y2194z"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="justify-end border-2 border-l-0 border-transparent css-1hhowo0"
          >
            <div
              class="-mr-0.5"
            >
              <button
                class="css-1jhy6v9"
                data-testid="DelegateRow__toggle-1"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Select
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class=" css-1li86da"
        data-testid="TableRow"
      >
        <td>
          <div
            class="font-bold border-2 border-r-0 border-transparent css-14huxtf"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="font-bold border-t-2 border-b-2 border-transparent space-x-4 css-1d4ra48"
          >
            <div
              class="-ml-0.5 shrink-0 css-tthe5h"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
              >
                <img
                  alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                  title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                />
              </div>
            </div>
            <div
              class="relative grow"
            >
              <span
                class="absolute flex w-full items-center"
              >
                <div
                  class="overflow-hidden text-ellipsis"
                >
                  genesis_17
                </div>
                <a
                  class="ring-focus group inline-block ml-2 block sm:hidden css-15tcy38"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href=""
                  rel="noopener noreferrer"
                >
                  <span
                    class="css-1y2194z"
                  >
                    <div
                      class="css-v0ob3f"
                      height="16"
                      width="16"
                    >
                      <svg>
                        arrow-external.svg
                      </svg>
                    </div>
                  </span>
                </a>
              </span>
              <span>
                 
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent css-1d4ra48"
          >
            <div>
              <div
                class="text-theme-warning-500 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  status-standby.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent css-1d4ra48"
          >
            <a
              class="ring-focus group inline-block css-15tcy38"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-1y2194z"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="justify-end border-2 border-l-0 border-transparent css-1hhowo0"
          >
            <div
              class="-mr-0.5"
            >
              <span>
                <button
                  class="css-1yqe28v"
                  data-testid="DelegateRow__toggle-2"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Select
                  </div>
                </button>
              </span>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRow should render the unselected vote 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=" css-1li86da"
        data-testid="TableRow"
      >
        <td>
          <div
            class="font-bold border-2 border-r-0 border-transparent bg-theme-danger-50 dark:bg-theme-background dark:border-theme-danger-400 css-14huxtf"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="font-bold border-t-2 border-b-2 border-transparent space-x-4 bg-theme-danger-50 dark:bg-theme-background dark:border-theme-danger-400 css-1d4ra48"
          >
            <div
              class="-ml-0.5 shrink-0 css-tthe5h"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <div
              class="relative grow"
            >
              <span
                class="absolute flex w-full items-center"
              >
                <div
                  class="overflow-hidden text-ellipsis"
                >
                  arkx
                </div>
                <a
                  class="ring-focus group inline-block ml-2 block sm:hidden css-15tcy38"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href=""
                  rel="noopener noreferrer"
                >
                  <span
                    class="css-1y2194z"
                  >
                    <div
                      class="css-v0ob3f"
                      height="16"
                      width="16"
                    >
                      <svg>
                        arrow-external.svg
                      </svg>
                    </div>
                  </span>
                </a>
              </span>
              <span>
                 
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent bg-theme-danger-50 dark:bg-theme-background dark:border-theme-danger-400 css-1d4ra48"
          >
            <div>
              <div
                class="text-theme-warning-500 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  status-standby.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent bg-theme-danger-50 dark:bg-theme-background dark:border-theme-danger-400 css-1d4ra48"
          >
            <a
              class="ring-focus group inline-block css-15tcy38"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-1y2194z"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="justify-end border-2 border-l-0 border-transparent bg-theme-danger-50 dark:bg-theme-background dark:border-theme-danger-400 css-1hhowo0"
          >
            <div
              class="-mr-0.5"
            >
              <button
                class="css-1cp5yjb"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Unselected
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRow should render when network requires vote amount 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=" css-1li86da"
        data-testid="TableRow"
      >
        <td>
          <div
            class="font-bold border-2 border-r-0 border-transparent css-14huxtf"
          >
            <span />
          </div>
        </td>
        <td>
          <div
            class="font-bold border-t-2 border-b-2 border-transparent space-x-4 css-1d4ra48"
          >
            <div
              class="-ml-0.5 shrink-0 css-tthe5h"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <div
              class="relative grow"
            >
              <span
                class="absolute flex w-full items-center"
              >
                <div
                  class="overflow-hidden text-ellipsis"
                >
                  arkx
                </div>
                <a
                  class="ring-focus group inline-block ml-2 block sm:hidden css-15tcy38"
                  data-ring-focus-margin="-m-1"
                  data-testid="Link"
                  href=""
                  rel="noopener noreferrer"
                >
                  <span
                    class="css-1y2194z"
                  >
                    <div
                      class="css-v0ob3f"
                      height="16"
                      width="16"
                    >
                      <svg>
                        arrow-external.svg
                      </svg>
                    </div>
                  </span>
                </a>
              </span>
              <span>
                 
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent css-1d4ra48"
          >
            <div>
              <div
                class="text-theme-warning-500 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg>
                  status-standby.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden sm:table-cell"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent css-1d4ra48"
          >
            <a
              class="ring-focus group inline-block css-15tcy38"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href=""
              rel="noopener noreferrer"
            >
              <span
                class="css-1y2194z"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg>
                    arrow-external.svg
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="w-68"
          data-testid="DelegateVoteAmount"
        >
          <div
            class="justify-center border-t-2 border-b-2 border-transparent css-1d4ra48"
          >
            <div
              class="relative flex-1 px-3"
            >
              <div
                class="relative"
              >
                <div
                  class="css-1ut8ui"
                  disabled=""
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="no-ligatures w-full border-none text-right focus:text-left pr-8 text-theme-secondary-text css-1nupw50"
                      data-testid="InputCurrency"
                      disabled=""
                      name="amount"
                      placeholder="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <span
                class="absolute inset-y-0 flex items-center space-x-3 right-7 cursor-default"
                data-testid="DelegateVoteAmount__ticker"
              >
                <span
                  class="text-theme-secondary-400 dark:text-theme-secondary-700"
                >
                  ARK
                </span>
              </span>
            </div>
          </div>
        </td>
        <td
          class="w-40"
        >
          <div
            class="justify-end border-2 border-l-0 border-transparent css-1hhowo0"
          >
            <div
              class="-mr-0.5"
            >
              <button
                class="css-1jhy6v9"
                data-testid="DelegateRow__toggle-0"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Select
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
